# OpenCV_Flutter_Samples

./: README.md
emphasize_red/: README.md  pubspec.yaml
emphasize_red/android/app/: CMakeLists.txt  build.gradle
emphasize_red/android/app/src/debug/: AndroidManifest.xml
emphasize_red/android/app/src/main/: AndroidManifest.xml
emphasize_red/android/app/src/main/kotlin/com/example/emphasize_red/: MainActivity.kt
emphasize_red/lib/: main.dart
emphasize_red/lib/opencv-cpp/: emphasize_red.cpp  emphasize_red.h
emphasize_red/linux/: CMakeLists.txt  my_application.cc
emphasize_red/windows/: CMakeLists.txt
emphasize_red/windows/emphasize_red/: emphasize_red.sln
image_batch/: .gitignore  README.md  pubspec.yaml
image_batch/lib/: main.dart
image_batch/linux/: CMakeLists.txt  my_application.cc
image_batch/windows/: CMakeLists.txt
opencv_camera/: README.md  pubspec.yaml
opencv_camera/lib/: main.dart
opencv_camera/linux/: CMakeLists.txt  my_application.cc
opencv_camera/windows/: CMakeLists.txt
rot_image/: .gitignore  .metadata  README.md  pubspec.yaml
rot_image/lib/: main.dart
rot_image/linux/: CMakeLists.txt  my_application.cc
rot_image/windows/: CMakeLists.txt
text_detection/: .gitignore  .metadata  README.md  pubspec.yaml
text_detection/lib/: main.dart
text_detection/linux/: CMakeLists.txt  my_application.cc
text_detection/windows/: CMakeLists.txt
video_proc/: .metadata  README.md  pubspec.yaml
video_proc/lib/: main.dart
video_proc/linux/: CMakeLists.txt  my_application.cc
video_proc/windows/: CMakeLists.txt
(+69 files in other folders)
